added more methods
